# AdGenius

./: .gitignore  README.md  cleanup_and_setup.sh  docker-compose.yml  setup_server.sh  setup_windows.bat  배포_가이드.md
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cpu  PROJECT_HANDOVER2.md  PROJECT_HANDOVER_FINAL.md  app.db  main.py  requirements-cpu.txt  requirements.txt
backend/app/: flux_service.py  main.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  crud_content.py  crud_project.py  crud_store.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/components/: auth-image.tsx  create-project-modal.tsx  header.tsx  providers.tsx  theme-toggle.tsx
frontend/contexts/: auth-context.tsx
frontend/hooks/: use-theme.ts  use-theme.tsx
frontend/lib/: api.ts  use-theme.ts
frontend/types/: index.ts
frontend_flutter_example/: pubspec.yaml
frontend_flutter_example/lib/: auth_service.dart  home_page.dart  login_page.dart  main.dart  profile_page.dart  project_detail_page.dart  project_service.dart  store_create_page.dart  user_service.dart
gcp_verification/: README.txt  data_cleanup_guide.txt  requirements.txt  verify_models.py
image-gen/: pyproject.toml  verify_models.py  zimage.py
image-gen-service/: README_SETUP.txt  requirements.txt
image-gen-service/backend/: config.py  main.py  model_manager.py  schemas.py
image-gen-service/frontend/: app.py
(+40 files in other folders)
