[project]
name = "image-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "safetensors>=0.7.0",
    "scipy>=1.15.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
